# Evidence-Manager

./: .gitignore  Cargo.toml  README.md  build.rs  build_exe.bat  evidence-manager.desktop  evidence_manager.iss  evidence_manager.py  requirements.txt
.github/workflows/: README.md  build.yml  static.yml
docs/: all.html  fn.main.html  index.html  sidebar-items.js  styles.css
docs/app/: enum.EvidenceTab.html  index.html  sidebar-items.js  struct.EvidenceManagerApp.html
docs/export_import/: index.html  sidebar-items.js  struct.ExportImportManager.html
docs/file_manager/: index.html  sidebar-items.js  struct.FileManager.html
docs/models/: enum.EvidenceType.html  index.html  sidebar-items.js  struct.EvidenceFile.html  struct.Person.html  struct.PersonInfo.html  struct.Quote.html
frontend/: index.html
frontend/css/: style.css
frontend/js/: app.js
icons/: icon.icns
site/: index.html  styles.css
src/: app.rs  export_import.rs  file_manager.rs  gui.rs  main.rs  models.rs  state.rs
tauri-src/: Cargo.toml  tauri.conf.json
tauri-src/src/: app_state.rs  commands.rs  export_import.rs  file_manager.rs  main.rs  models.rs
