[package]
name = "evidence-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.32"
eframe = "0.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3"
zip = "0.6"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
rfd = "0.12"

[build-dependencies]
winres = "0.1"
