[package]
name = "evidence-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.12", features = ["tokio", "image", "svg"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3"
zip = "0.6"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
rfd = "0.12"
tokio = { version = "1.0", features = ["full"] }

[build-dependencies]
winres = "0.1"
