[package]
name = "evidence-manager-tauri"
version = "1.0.0"
edition = "2021"
description = "Evidence Manager desktop application backend powered by Tauri"
license = "MIT"

[dependencies]
tauri = { version = "2.0.0", features = ["config-json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
walkdir = "2.5"
zip = "0.6"

[build-dependencies]
tauri-build = { version = "2.0.0", features = ["config-json"] }
